--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "worker-trademe-site-stats"
 main = "src/index.ts"
 compatibility_date = "2022-12-28"
+usage_model = "bundled"
 
 [triggers]
 crons = [ "* * * * *" ]
